--- a/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.css
+++ b/src/app/core/layout/inner-pages/agent/create-agent/create-agent.component.css
@@ -21,11 +21,16 @@
 }
 .autoList li{
     list-style: none;
-    padding: 5px 15px;
 }
 .autoList li span{
     display: block;
+    padding: 5px 15px;
 }
 .autoList li:hover{
     background: #e2e2e2;
+}
+.hideList{
+    float: right;
+    margin: -27px 10px 0 0;
+    cursor: pointer;
 }
