--- a/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
+++ b/src/app/core/layout/inner-pages/widget/create-widget/create-widget.component.html
@@ -27,23 +27,44 @@
 
                                 <!-- Admin for Widget -->
                                 <div class="col-md-6" [hidden]="(authState | async).isAdmin">
-                                    <div class="form-group">
+                                    <div class="form-group autoListArea">
                                         <label class="control-label" for="admin">
                                             Admin for Widget
                                         </label>
-                                        <select class="form-control"
-                                                id="admin"
-                                                name="userId"
-                                                [disabled]="editMode || (authState | async).isAdmin"
-                                                #selectedAdmin
-                                                [ngModel]="widget.userId"
-                                                (change)="adminChanged(selectedAdmin.value)">
-                                            <option selected value="0">Choose...</option>
-                                            <option [value]="item.id"
-                                                    *ngFor="let item of (afterLoginState | async).admin?.list; let i = index">
-                                                {{item.first_name}} {{item.last_name}}
-                                            </option>
-                                        </select>
+
+                                        <div *ngIf="(authState | async).isAdmin; then thenTemplateName else elseTemplateName"></div>
+
+                                        <ng-template #thenTemplateName>
+                                            <input type="text" class="form-control"
+                                                   name="adminName" autocomplete="off" readonly [value]="(authState | async).name">
+                                        </ng-template>
+
+                                        <ng-template #elseTemplateName>
+                                            <input type="text" (keyup)="checkAdminname($event.target.value)"
+
+                                                   [ngClass]="editMode ?  'form-control' : 'form-control' "
+                                                   [ngModel]="adminName" name="adminName" (click)="checkAdminname($event.target.value)" autocomplete="off" [readonly]="editMode">
+                                            <span *ngIf="( !editMode && this.adminName)" (click)="resetList()" class="hideList"> <i class="fa fa-close"></i> </span>
+                                            <ul *ngIf="showThis" class="autoList">
+                                                <li *ngFor="let item of updatedlistOfAdmins; let i = index"> <span (click)="assignValue(item.id,item.first_name,item.last_name)">  {{item.first_name}} {{item.last_name}}  </span></li>
+                                            </ul>
+                                        </ng-template>
+                                        <input type="hidden"  [ngModel]="widget.userId" id="admin" name="userId" #selectedAdmin>
+
+
+                                        <!--<select class="form-control"-->
+                                                <!--id="admin"-->
+                                                <!--name="userId"-->
+                                                <!--[disabled]="editMode || (authState | async).isAdmin"-->
+                                                <!--#selectedAdmin-->
+                                                <!--[ngModel]="widget.userId"-->
+                                                <!--(change)="adminChanged(selectedAdmin.value)">-->
+                                            <!--<option selected value="0">Choose...</option>-->
+                                            <!--<option [value]="item.id"-->
+                                                    <!--*ngFor="let item of (afterLoginState | async).admin?.list; let i = index">-->
+                                                <!--{{item.first_name}} {{item.last_name}}-->
+                                            <!--</option>-->
+                                        <!--</select> OLD SELECT -->
                                     </div>
                                 </div>
 
