fix search in department and widget list v1.0

--- a/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
+++ b/src/app/core/layout/inner-pages/department/create-department/create-department.component.html
@@ -21,7 +21,7 @@
                             <div class="col-md-12">
                                 <div class="row">
                                     <div class="col-md-6">
-                                        <div class="form-group">
+                                        <div class="form-group autoListArea">
                                             <label class="control-label" for="admin">
                                                 Admin for Department
                                             </label>
