Fix create department in agent create or edit section

--- a/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
+++ b/src/app/core/layout/inner-pages/admin/list-admin/list-admin.component.html
@@ -19,7 +19,7 @@
                         <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
                             <div class="row">
                                 <div class="col-sm-6">
-                                    Search : <input [(ngModel)]="term" placeholder="keyword">
+                                    Search : <input [(ngModel)]="term" placeholder="All fields">
                                 </div>
                                 <div class="col-sm-6"></div>
                             </div>
