--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -18,7 +18,7 @@
           <div class="box-body">
             <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
               <div class="row">
-                <div class="col-sm-6">Search : <input [(ngModel)]="term" placeholder="keyword"></div>
+                <div class="col-sm-6">Search : <input [(ngModel)]="term" placeholder="All keywords"></div>
                 <div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12">
               <table id="agentListTable" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
               <thead>
