--- a/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
+++ b/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
@@ -18,7 +18,7 @@
                     <div class="box-body">
                         <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
                             <div class="row">
-                                <div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="keyword"> </div>
+                                <div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="All fields"> </div>
                                 <div class="col-sm-6"></div>
                             </div>
                             <div class="row">
