--- a/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/agent/list-agent/list-agent.component.html
@@ -17,62 +17,81 @@
           <!-- /.box-header -->
           <div class="box-body">
             <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
-              <div class="row">
-                <div class="col-sm-6">Search : <input [(ngModel)]="term" placeholder="All keywords"></div>
-                <div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12">
-              <table id="agentListTable" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
-              <thead>
-              <tr role="row">
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">First Name </th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">Last Name </th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">Company </th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Email </th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">Register Date </th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>
-              </tr>
-              </thead>
-              <tbody>
-              <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).agent.list | filter : term | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
-                <td>{{i+1}}</td>
-                <td>{{item.first_name}}</td>
-                <td>{{item.last_name}}</td>
-                <td>{{item.get_company?.company}}</td>
-                <td>{{item.email}}</td>
-                <td>{{item.phone}}</td>
-                <td>{{item.created_at | amUtc | amDateFormat:'MMMM DD YYYY' }}</td>
-                <td>
-                  <!-- Single button -->
-                  <div class="btn-group" [appDropdown]="'open'" [disable-hover]="true">
-                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Action <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu">
-                      <li> <a (click)="onEditAgent(item.id)"><i class="fa fa-pencil" aria-hidden="true"></i>Edit</a> </li>
-                      <!--<li *ngIf="item.profile_status == '1'"> <a (click)="blockUser(item.id)"><i class="fa fa-lock" aria-hidden="true"></i>Block</a> </li>-->
-                      <!--<li *ngIf="item.profile_status == '2'"> <a (click)="UnblockUser(item.id)"><i class="fa fa-unlock" aria-hidden="true"></i>Unblock</a> </li>-->
-                    </ul>
-                  </div>
-                </td>
-              </tr>
-              </tbody>
-            </table>
-              <div class="row">
-                <pagination-controls class="older_post_text"
-                                     (pageChange)="page=$event"
-                                     maxSize="9"
-                                     directionLinks="true"
-                                     autoHide="true"
-                                     previousLabel=""
-                                     nextLabel=""
-                                     screenReaderPaginationLabel=""
-                                     screenReaderPageLabel="page"
-                                     screenReaderCurrentLabel="You're on page">
-                </pagination-controls>
+              <div class="row filter">
+                <div class="col-sm-2">Filter by company : <input [(ngModel)]="companySearch" placeholder="Company"></div>
+                <div class="col-sm-10">Search : <input [(ngModel)]="term" placeholder="All keywords"></div>
               </div>
-            </div>
-            </div>
+              <div class="row">
+                <div class="col-sm-12">
+                  <table id="agentListTable" class="table table-bordered table-hover dataTable" role="grid"
+                         aria-describedby="example2_info">
+                    <thead>
+                    <tr role="row">
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                          class="mdl-data-table__cell--non-numeric">First Name
+                      </th>
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                          class="mdl-data-table__cell--non-numeric">Last Name
+                      </th>
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                          class="mdl-data-table__cell--non-numeric">Company
+                      </th>
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">Email</th>
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                          aria-label="CSS grade: activate to sort column ascending">Phone
+                      </th>
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                          class="mdl-data-table__cell--non-numeric">Register Date
+                      </th>
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                          aria-label="CSS grade: activate to sort column ascending">Action
+                      </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr role="row" class="odd"
+                        *ngFor="let item of (afterLoginState | async).agent.list | filter : companySearch: term | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
+                      <td>{{i+1}}</td>
+                      <td>{{item.first_name}}</td>
+                      <td>{{item.last_name}}</td>
+                      <td>{{item.get_company?.company}}</td>
+                      <td>{{item.email}}</td>
+                      <td>{{item.phone}}</td>
+                      <td>{{item.created_at | amUtc | amDateFormat:'MMMM DD YYYY' }}</td>
+                      <td>
+                        <!-- Single button -->
+                        <div class="btn-group" [appDropdown]="'open'" [disable-hover]="true">
+                          <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                                  aria-haspopup="true" aria-expanded="false">
+                            Action <span class="caret"></span>
+                          </button>
+                          <ul class="dropdown-menu">
+                            <li><a (click)="onEditAgent(item.id)"><i class="fa fa-pencil"
+                                                                     aria-hidden="true"></i>Edit</a></li>
+                            <!--<li *ngIf="item.profile_status == '1'"> <a (click)="blockUser(item.id)"><i class="fa fa-lock" aria-hidden="true"></i>Block</a> </li>-->
+                            <!--<li *ngIf="item.profile_status == '2'"> <a (click)="UnblockUser(item.id)"><i class="fa fa-unlock" aria-hidden="true"></i>Unblock</a> </li>-->
+                          </ul>
+                        </div>
+                      </td>
+                    </tr>
+                    </tbody>
+                  </table>
+                  <div class="row">
+                    <pagination-controls class="older_post_text"
+                                         (pageChange)="page=$event"
+                                         maxSize="9"
+                                         directionLinks="true"
+                                         autoHide="true"
+                                         previousLabel=""
+                                         nextLabel=""
+                                         screenReaderPaginationLabel=""
+                                         screenReaderPageLabel="page"
+                                         screenReaderCurrentLabel="You're on page">
+                    </pagination-controls>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
           <!-- /.box-body -->
