--- a/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
+++ b/src/app/core/layout/inner-pages/department/list-department/list-department.component.html
@@ -17,10 +17,10 @@
                     <!-- /.box-header -->
                     <div class="box-body">
                         <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
-                            <div class="row">
-                                <div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="All fields"> </div>
-                                <div class="col-sm-6"></div>
-                            </div>
+                          <div class="row filter">
+                            <div class="col-sm-2">Filter by company : <input [(ngModel)]="companySearch" placeholder="Company"></div>
+                            <div class="col-sm-10">Search : <input [(ngModel)]="term" placeholder="All keywords"></div>
+                          </div>
                             <div class="row">
                                 <div class="col-sm-12">
                                     <table id="departmentListTable" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
@@ -35,7 +35,7 @@
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).department.list | filter : term | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
+                                        <tr role="row" class="odd" *ngFor="let item of (afterLoginState | async).department.list | filter : companySearch: term | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
                                             <td>{{i+1}}</td>
                                             <td>{{item.department_name}}</td>
                                             <td>{{item.department_details | slice:0:120 }}</td>
