--- a/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.css
+++ b/src/app/core/layout/inner-pages/widget/list-widget/list-widget.component.css
@@ -1,8 +1,11 @@
 a {
     cursor: pointer;
 }
+.filter {
+  padding-bottom: 10px;
+}
 @media screen and (max-width:520px){
     .box{
       overflow-x: scroll;
-  }  
+  }
   }
