Fix chat transfer v1.0

--- a/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
+++ b/src/app/core/layout/inner-pages/chat/ongoing/ongoing.component.html
@@ -54,8 +54,9 @@
                                                     <button (click)="onSomeMsgAction(5)" class="btn btn-success">Resolve
                                                         Chat
                                                     </button>
+
                                                     <div class="dropdown target-drop" [appDropdown]="'open'"
-                                                         [disable-hover]="true">
+                                                         [disable-hover]="false">
                                                         <button class="btn btn-default dropdown-toggle"
                                                                 type="button" data-toggle="dropdown">
                                                             Transfer
