--- a/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
+++ b/src/app/core/layout/inner-pages/chats/list-agent/list-agent.component.html
@@ -1,6 +1,6 @@
 <div class="content-wrapper">
   <section class="content-header">
-    <h1>Agent List</h1>
+    <h1>Chat List</h1>
     <ol class="breadcrumb">
       <li><a routerLink="/dashboard"><i class="fa fa-dashboard"></i> Home</a></li>
       <li *ngIf="chatMode"><a href="javascript:void(0)">Chats</a></li>
@@ -13,65 +13,78 @@
       <div class="col-xs-12">
         <div class="box">
           <div class="box-header">
-            <h3 class="box-title">Agent List</h3>
+            <div class="row">
+              <div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="keyword"></div>
+            </div>
           </div>
           <!-- /.box-header -->
           <div class="box-body">
             <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
               <div class="row">
-                <div class="col-sm-6"> Search : <input [(ngModel)]="term" placeholder="keyword"> </div>
-                <div class="col-sm-6"></div>
-              </div>
-              <div class="row"><div class="col-sm-12">
-              <table id="chatList" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
-              <thead>
-              <tr role="row">
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">First Name </th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric" >Last Name </th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Phone</th>
-                <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" class="mdl-data-table__cell--non-numeric">Department </th>
-                <th  tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Action</th>
-              </tr>
-              </thead>
-              <tbody>
-                <tr role="row" class="odd" *ngFor="let item of (chatState | async).agentList | filter : term | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
-                <td>{{i+1}}</td>
-                <td>{{item.first_name}}</td>
-                <td>{{item.last_name}}</td>
-                <td>{{item.email}}</td>
-                <td>{{item.phone}}</td>
-                <td>{{item.department_agent_mapping.department_details.department_name}}</td>
-                <td>
-                  <!-- Single button -->
-                  <div class="btn-group" >
-                    <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false" *ngIf="chatMode" (click)="onViewChat(item.id)">
-                      View Chats
-                    </button>
-                    <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false" *ngIf="!chatMode" (click)="onViewContact(item.id)">
-                      View Contact List
-                    </button>
+                <div class="col-sm-12">
+                  <table id="chatList" class="table table-bordered table-hover dataTable" role="grid"
+                         aria-describedby="example2_info">
+                    <thead>
+                    <tr role="row">
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1">#</th>
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                          class="mdl-data-table__cell--non-numeric">First Name
+                      </th>
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                          class="mdl-data-table__cell--non-numeric">Last Name
+                      </th>
+                      <!--<th tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Email</th>-->
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                          aria-label="CSS grade: activate to sort column ascending">Phone
+                      </th>
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                          class="mdl-data-table__cell--non-numeric">Department
+                      </th>
+                      <th tabindex="0" aria-controls="example2" rowspan="1" colspan="1"
+                          aria-label="CSS grade: activate to sort column ascending">Action
+                      </th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr role="row" class="odd"
+                        *ngFor="let item of (chatState | async).agentList | filter : term | paginate: { itemsPerPage: 10, currentPage: page }; let i = index">
+                      <td>{{i+1}}</td>
+                      <td>{{item.first_name}}</td>
+                      <td>{{item.last_name}}</td>
+                      <!--<td>{{item.email}}</td>-->
+                      <td>{{item.phone}}</td>
+                      <td>{{item.department_agent_mapping.department_details.department_name}}</td>
+                      <td>
+                        <!-- Single button -->
+                        <div class="btn-group">
+                          <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false"
+                                  *ngIf="chatMode" (click)="onViewChat(item.id)">
+                            View Chats
+                          </button>
+                          <button type="button" class="btn btn-default" aria-haspopup="true" aria-expanded="false"
+                                  *ngIf="!chatMode" (click)="onViewContact(item.id)">
+                            View Contact List
+                          </button>
+                        </div>
+                      </td>
+                    </tr>
+                    </tbody>
+                  </table>
+                  <div class="row">
+                    <pagination-controls class="older_post_text"
+                                         (pageChange)="page=$event"
+                                         maxSize="9"
+                                         directionLinks="true"
+                                         autoHide="true"
+                                         previousLabel=""
+                                         nextLabel=""
+                                         screenReaderPaginationLabel=""
+                                         screenReaderPageLabel="page"
+                                         screenReaderCurrentLabel="You're on page">
+                    </pagination-controls>
                   </div>
-                </td>
-              </tr>
-              </tbody>
-            </table>
-                <div class="row">
-                  <pagination-controls class="older_post_text"
-                                       (pageChange)="page=$event"
-                                       maxSize="9"
-                                       directionLinks="true"
-                                       autoHide="true"
-                                       previousLabel=""
-                                       nextLabel=""
-                                       screenReaderPaginationLabel=""
-                                       screenReaderPageLabel="page"
-                                       screenReaderCurrentLabel="You're on page">
-                  </pagination-controls>
                 </div>
-            </div>
-            </div>
+              </div>
 
             </div>
           </div>
@@ -79,7 +92,7 @@
         </div>
         <!-- /.box -->
         <!--<div class="msg-popup">-->
-          <!--<p>This is a success msg!</p>-->
+        <!--<p>This is a success msg!</p>-->
         <!--</div>-->
       </div>
       <!-- /.col -->
